Add parenthesis to methods and events in TOC
Applies to navigation (TOC) main, drawer, and search states

--- a/tmpl/navigation-drawer.tmpl
+++ b/tmpl/navigation-drawer.tmpl
@@ -195,7 +195,7 @@ this.modifiedNav = modifiedNav;
 
 	                item.methods.forEach(function (v) {
 	            ?>
-	                <li data-name="<?js= v.longname ?>"><?js= self.linkto(v.longname, v.name) ?></li>
+	                <li data-name="<?js= v.longname ?>"><?js= self.linkto(v.longname, v.name + "()") ?></li>
 	            <?js
 	                });
 	            }
@@ -209,7 +209,7 @@ this.modifiedNav = modifiedNav;
 	            <?js
 	                item.events.forEach(function (v) {
 	            ?>
-	                <li data-name="<?js= v.longname ?>"><?js= self.linkto(v.longname, v.name) ?></li>
+	                <li data-name="<?js= v.longname ?>"><?js= self.linkto(v.longname, v.name + "()") ?></li>
 	            <?js
 	                });
 	            }
