--- a/tmpl/navigation.tmpl
+++ b/tmpl/navigation.tmpl
@@ -182,7 +182,7 @@ this.modifiedNav = modifiedNav;
 
 	                item.methods.forEach(function (v) {
 	            ?>
-	                <li data-name="<?js= v.longname ?>"><?js= self.linkto(v.longname, v.name) ?></li>
+	                <li data-name="<?js= v.longname ?>"><?js= self.linkto(v.longname, v.name + "()") ?></li>
 	            <?js
 	                });
 	            }
@@ -196,7 +196,7 @@ this.modifiedNav = modifiedNav;
 	            <?js
 	                item.events.forEach(function (v) {
 	            ?>
-	                <li data-name="<?js= v.longname ?>"><?js= self.linkto(v.longname, v.name) ?></li>
+	                <li data-name="<?js= v.longname ?>"><?js= self.linkto(v.longname, v.name + "()") ?></li>
 	            <?js
 	                });
 	            }
