Update copyright, and legal link

--- a/tmpl/layout.tmpl
+++ b/tmpl/layout.tmpl
@@ -363,7 +363,7 @@ var self = this;
             </section>
           </nav>
           <div class="column-24">
-            <p><small>© Copyright 2015 Environmental Systems Research Institute, Inc. | <a href="http://www.esri.com/legal/privacy">Privacy</a> | <a href="http://www.esri.com/legal/software-license">Legal</a></small></p>
+            <p><small>Copyright &copy; 2015 Esri. All rights reserved. | <a href="http://www.esri.com/legal/privacy">Privacy</a> | <a href="http://www.esri.com/legal">Legal</a></small></p>
           </div>
         </div>
 
