Remove parenthesis from event names in the navigation TOC
Covers responsive drawer TOC, search list, and standard TOC

--- a/tmpl/navigation-search-list.tmpl
+++ b/tmpl/navigation-search-list.tmpl
@@ -91,7 +91,7 @@ var modifiedNav = self.modifiedNav;
 											hash = hashMatch[0];
 										}
 	            ?>
-                <li data-name="<?js= v.longname ?>" data-esriname="<?js= hash ?>"><?js= self.linkto(v.longname, v.name + "()") ?></li>
+                <li data-name="<?js= v.longname ?>" data-esriname="<?js= hash ?>"><?js= self.linkto(v.longname, v.name ) ?></li>
                 <?js
 	                });
 	            }
