--- a/tmpl/container.tmpl
+++ b/tmpl/container.tmpl
@@ -122,7 +122,7 @@
         if (members && members.length && members.forEach) { 
     ?>
         <h3 class="subsection-title" id="properties">Properties</h3>
-        <div><i>Any properties can be set, retrieved or listened to using the <a href="../guide/get-set-watch/">get/set/watch methodology</a>.</i></div>
+        <div class="trailer-1"><i>Any properties can be set, retrieved or listened to using the <a href="../guide/get-set-watch/">get/set/watch methodology</a>.</i></div>
         
         <dl><?js members.forEach(function(p) { ?>
             <?js= self.partial('members.tmpl', p) ?>
