Fix drawer issue: js-drawer-toggle on anchor rather than outer div

--- a/tmpl/layout.tmpl
+++ b/tmpl/layout.tmpl
@@ -139,8 +139,8 @@ var self = this;
 		      //  ↳ patterns → _drawers.md
 		      // --------------------------------------------------------------------
 					?>
-		      <div class="js-drawer-toggle tablet-show" data-drawer="top-nav">
-		        <a href="#" class="top-nav-title top-nav-title-tablet">☰ ArcGIS API for JavaScript Beta</a>
+		      <div class="tablet-show">
+		        <a href="#" class="js-drawer-toggle top-nav-title top-nav-title-tablet" data-drawer="top-nav">☰ ArcGIS API for JavaScript Beta</a>
 		      </div>
 
 		      <?js 
