--- a/tmpl/navigation-drawer.tmpl
+++ b/tmpl/navigation-drawer.tmpl
@@ -98,6 +98,8 @@ this.nav.forEach(function items(item) {
 modifiedNav.sort(firstBy(sortBy("folderpath")).thenBy(sortBy("classormodulename")));
 this.modifiedNav = modifiedNav;
 ?>
+<div class="drawer drawer-left js-drawer" data-drawer="top-nav">
+<nav class="drawer-nav">
 <div class="navigation">
     <?js if (env.conf.templates.applicationName && env.conf.templates.applicationName.length > 0) { ?>
         <h3 class="applicationName"><a href="index.html"><?js= env.conf.templates.applicationName ?></a></h3>
@@ -158,7 +160,7 @@ this.modifiedNav = modifiedNav;
 				<h4 class="accordion-title"><?js= folder ?></h4>
 		<?js }?>
 	        <nav class="accordion-content" data-name="<?js= item.longname ?>">
-                <?js= self.linkto(item.longname, item.classormodulename, "side-nav-link") ?>
+							<?js= self.linkto(item.longname, item.classormodulename, "side-nav-link") ?>
 				
 	            <ul class="members itemMembers">
 	            <?js
@@ -224,4 +226,6 @@ this.modifiedNav = modifiedNav;
 	?>
     </aside>
 	
+</div>
+</nav>
 </div>
