Fix favicon path in head partial

--- a/tmpl/head.tmpl
+++ b/tmpl/head.tmpl
@@ -46,7 +46,7 @@ var self = this;
     // --------------------------------------------------------------------
     ?>
     <?js // Link to favicon ?>
-    <link rel="shortcut icon" href="../assets/img/favicon.ico">
+    <link rel="shortcut icon" href="../assets/css/img/favicon.ico">
 
     <?js
     // --------------------------------------------------------------------
