navigation TOC change <span class="subtitle"> to <h6 class="subtitle font-size--2 trailer-0">

--- a/tmpl/navigation-drawer.tmpl
+++ b/tmpl/navigation-drawer.tmpl
@@ -123,7 +123,7 @@ this.modifiedNav = modifiedNav;
 					<a class="side-nav-link" href="../sample-code">Sample Code</a>
 				</nav>
 				<nav class="accordion-content">
-                    <a class="side-nav-link" href="../forum">Forum</a>
+					<a class="side-nav-link" href="../forum">Forum</a>
 				</nav>
 			</div>
 		</aside>
@@ -166,7 +166,7 @@ this.modifiedNav = modifiedNav;
 	            <?js
 	            if (item.members.length) {
 	            ?>
-	            <span class="subtitle">Properties</span>
+	            <h6 class="subtitle text-light-gray font-size--2 trailer-0">Properties</h6>
 	            <?js
 	                item.members.forEach(function (v) {
 	            ?>
@@ -180,7 +180,7 @@ this.modifiedNav = modifiedNav;
 	            <?js
 	            if (item.typedefs.length) {
 	            ?>
-	            <span class="subtitle">Typedefs</span>
+	            <h6 class="subtitle text-light-gray font-size--2 trailer-0">Typedefs</h6>
 	            <?js
 	                item.typedefs.forEach(function (v) {
 	            ?>
@@ -194,7 +194,7 @@ this.modifiedNav = modifiedNav;
 	            <?js
 	            if (item.methods.length) {
 	            ?>
-	            <span class="subtitle">Methods</span>
+	            <h6 class="subtitle text-light-gray font-size--2 trailer-0">Methods</h6>
 	            <?js
 
 	                item.methods.forEach(function (v) {
@@ -209,7 +209,7 @@ this.modifiedNav = modifiedNav;
 	            <?js
 	            if (item.events.length) {
 	            ?>
-	            <span class="subtitle">Events</span>
+	            <h6 class="subtitle text-light-gray font-size--2 trailer-0">Events</h6>
 	            <?js
 	                item.events.forEach(function (v) {
 	            ?>
