--- a/tmpl/navigation.tmpl
+++ b/tmpl/navigation.tmpl
@@ -149,7 +149,7 @@ this.modifiedNav = modifiedNav;
 	            <?js
 	            if (item.members.length) {
 	            ?>
-	            <span class="subtitle">Properties</span>
+	            <h6 class="subtitle text-light-gray font-size--2 trailer-0">Properties</h6>
 	            <?js
 	                item.members.forEach(function (v) {
 	            ?>
@@ -163,7 +163,7 @@ this.modifiedNav = modifiedNav;
 	            <?js
 	            if (item.typedefs.length) {
 	            ?>
-	            <span class="subtitle">Typedefs</span>
+	            <h6 class="subtitle text-light-gray font-size--2 trailer-0">Typedefs</h6>
 	            <?js
 	                item.typedefs.forEach(function (v) {
 	            ?>
@@ -177,7 +177,7 @@ this.modifiedNav = modifiedNav;
 	            <?js
 	            if (item.methods.length) {
 	            ?>
-	            <span class="subtitle">Methods</span>
+	            <h6 class="subtitle text-light-gray font-size--2 trailer-0">Methods</h6>
 	            <?js
 
 	                item.methods.forEach(function (v) {
@@ -192,7 +192,7 @@ this.modifiedNav = modifiedNav;
 	            <?js
 	            if (item.events.length) {
 	            ?>
-	            <span class="subtitle">Events</span>
+	            <h6 class="subtitle text-light-gray font-size--2 trailer-0">Events</h6>
 	            <?js
 	                item.events.forEach(function (v) {
 	            ?>
