--- a/tmpl/method.tmpl
+++ b/tmpl/method.tmpl
@@ -3,15 +3,14 @@ var data = obj;
 var self = this;
 ?>
 <dt>
+    <?js
+    // --------------------------------------------------------------------
+    // Use function to strip Esri module path found in templateHelper.js
+    // --------------------------------------------------------------------
+    ?>
     <div class="nameContainer<?js if (data.inherited) { ?> inherited<?js } ?>">
-        <h4 class="name" id="<?js= id ?>">
-            <?js if (data.inherited || data.inherits) { ?>
-                <span class="inherited"><?js= this.linkto(data.inherits, 'inherited') ?></span>
-            <?js } ?>
-						<?js// --------------------------------------------------------------------
-					      // Use function to strip Esri module path found in templateHelper.js
-					      // --------------------------------------------------------------------?>
-            <a class="icon-anchor" href="#<?js= id ?>" aria-hidden="true"><span class="icon icon-ui-link"></span></a><?js= data.attribs + (kind === 'class' ? 'new ' : '') + (data.scope === 'static' ? self.parseEsriAPIString("name", longname) : name) + (kind !== 'event' ? data.signature : '') ?>
+        <a class="icon-anchor" href="#<?js= id ?>" aria-hidden="true"><span class="icon icon-ui-link"></span></a>
+        <h4 class="name" id="<?js= id ?>"><?js if (data.inherited || data.inherits) { ?><span class="inherited"><?js= this.linkto(data.inherits, 'inherited') ?></span><?js } ?><?js= data.attribs + (kind === 'class' ? 'new ' : '') + (data.scope === 'static' ? self.parseEsriAPIString("name", longname) : name) + (kind !== 'event' ? data.signature : '') ?>
         </h4>
     </div>
 
